// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component::DateInput snapshots renders an error state 1`] = `
<div
  className="m-btn-inside-input"
>
  <input
    className="a-text-input a-text-input__error"
    max={null}
    min={null}
    onChange={[Function]}
    placeholder="mm/dd/yyyy"
    size="15"
    value="foo"
  />
  <button
    className="a-btn a-btn__link"
    onClick={[Function]}
  >
    <span
      className="cf-icon cf-icon-delete"
    />
  </button>
</div>
`;

exports[`component::DateInput snapshots renders without crashing 1`] = `
<div
  className="m-btn-inside-input"
>
  <input
    className="a-text-input"
    max={null}
    min={null}
    onChange={[Function]}
    placeholder="mm/dd/yyyy"
    size="15"
    value=""
  />
</div>
`;

exports[`component::DateInput snapshots shows the clear button after text is entered 1`] = `
<div
  className="m-btn-inside-input"
>
  <input
    className="a-text-input"
    max={null}
    min={null}
    onChange={[Function]}
    placeholder="mm/dd/yyyy"
    size="15"
    value="12"
  />
  <button
    className="a-btn a-btn__link"
    onClick={[Function]}
  >
    <span
      className="cf-icon cf-icon-delete"
    />
  </button>
</div>
`;
